--- a/.github/workflows/sync-dev-branches.yml
+++ b/.github/workflows/sync-dev-branches.yml
@@ -1,4 +1,3 @@
-# .github/workflows/sync-dev-branches.yml
 name: Sync Dev Branches on PR Merge
 
 on:
@@ -30,50 +29,54 @@ jobs:
 
       - name: Sync dev branches
         run: |
+          set -e  # Arrêter sur erreur, mais on va les gérer
+          
           git fetch origin
           
-          # Récupère les branches dev/*
           DEV_BRANCHES=$(git branch -r | grep 'origin/dev/' | grep -v HEAD | sed 's/origin\///' | xargs)
           
           if [ -z "$DEV_BRANCHES" ]; then
-            echo "Aucune branche dev/* à synchroniser"
+            echo "ℹ️ Aucune branche dev/* à synchroniser"
             exit 0
           fi
           
-          echo "Branches à synchroniser: $DEV_BRANCHES"
+          echo "🔄 Branches à synchroniser: $DEV_BRANCHES"
           
           SYNC_SUCCESS=0
           SYNC_FAILED=0
           
           for branch in $DEV_BRANCHES; do
             echo ""
-            echo "Synchronisation de $branch..."
+            echo "📝 Synchronisation de $branch..."
             
-            if git checkout $branch; then
-              if git merge main --no-edit; then
-                if git push origin $branch; then
-                  echo "$branch synchronisée"
-                  ((SYNC_SUCCESS++))
-                else
-                  echo "Échec push $branch"
-                  ((SYNC_FAILED++))
-                fi
-              else
-                echo "Conflits sur $branch - ignorée"
-                git merge --abort
-                ((SYNC_FAILED++))
-              fi
-            else
-              echo "Checkout impossible $branch"
+            # Gestion d'erreur locale pour chaque branche
+            (
+              set -e
+              git checkout $branch
+              git merge main --no-edit
+              git push origin $branch
+              echo "✅ $branch synchronisée"
+            ) && ((SYNC_SUCCESS++)) || {
+              echo "❌ Échec sur $branch"
+              # Nettoyage en cas d'échec
+              git merge --abort 2>/dev/null || true
+              git checkout main 2>/dev/null || true
               ((SYNC_FAILED++))
-            fi
+            }
           done
           
+          # Retour sur main
           git checkout main
           
           echo ""
-          echo "Résumé: $SYNC_SUCCESS réussies, $SYNC_FAILED échecs"
+          echo "📊 Résumé: ✅ $SYNC_SUCCESS réussies, ❌ $SYNC_FAILED échecs"
           
-          if [ $SYNC_FAILED -gt 0 ]; then
+          # Ne faire échouer l'action qui si TOUTES les branches échouent
+          if [ $SYNC_SUCCESS -eq 0 ] && [ $SYNC_FAILED -gt 0 ]; then
+            echo "::error::Toutes les synchronisations ont échoué"
+            exit 1
+          elif [ $SYNC_FAILED -gt 0 ]; then
             echo "::warning::Certaines branches n'ont pas pu être synchronisées"
           fi
+          
+          exit 0
