--- a/.github/workflows/sync-dev-branches.yml
+++ b/.github/workflows/sync-dev-branches.yml
@@ -29,8 +29,6 @@ jobs:
 
       - name: Sync dev branches
         run: |
-          set -e  # Arrêter sur erreur, mais on va les gérer
-          
           git fetch origin
           
           DEV_BRANCHES=$(git branch -r | grep 'origin/dev/' | grep -v HEAD | sed 's/origin\///' | xargs)
@@ -43,40 +41,72 @@ jobs:
           echo "🔄 Branches à synchroniser: $DEV_BRANCHES"
           
           SYNC_SUCCESS=0
+          SYNC_SKIPPED=0
           SYNC_FAILED=0
           
           for branch in $DEV_BRANCHES; do
             echo ""
-            echo "📝 Synchronisation de $branch..."
+            echo "📝 Vérification de $branch..."
             
-            # Gestion d'erreur locale pour chaque branche
-            (
-              set -e
-              git checkout $branch
-              git merge main --no-edit
-              git push origin $branch
-              echo "✅ $branch synchronisée"
-            ) && ((SYNC_SUCCESS++)) || {
-              echo "❌ Échec sur $branch"
-              # Nettoyage en cas d'échec
-              git merge --abort 2>/dev/null || true
-              git checkout main 2>/dev/null || true
+            # Checkout de la branche
+            if ! git checkout $branch; then
+              echo "❌ Impossible de checkout $branch"
               ((SYNC_FAILED++))
-            }
+              continue
+            fi
+            
+            # Vérifier si la branche est déjà à jour
+            git fetch origin $branch
+            LOCAL_COMMIT=$(git rev-parse HEAD)
+            MAIN_COMMIT=$(git rev-parse origin/main)
+            
+            # Vérifier si main a des commits que la branche n'a pas
+            BEHIND_COUNT=$(git rev-list --count HEAD..origin/main)
+            
+            if [ "$BEHIND_COUNT" -eq 0 ]; then
+              echo "✅ $branch déjà à jour (aucun commit à synchroniser)"
+              ((SYNC_SKIPPED++))
+              continue
+            fi
+            
+            echo "🔄 $branch en retard de $BEHIND_COUNT commits, synchronisation..."
+            
+            # Tentative de merge
+            if git merge origin/main --no-edit; then
+              # Vérifier s'il y a quelque chose à pousser
+              if git diff --quiet HEAD origin/$branch; then
+                echo "✅ $branch synchronisée localement (rien à pousser)"
+                ((SYNC_SUCCESS++))
+              else
+                # Il y a des changements, on pousse
+                if git push origin $branch; then
+                  echo "✅ $branch synchronisée et poussée"
+                  ((SYNC_SUCCESS++))
+                else
+                  echo "❌ Échec du push pour $branch"
+                  ((SYNC_FAILED++))
+                fi
+              fi
+            else
+              echo "⚠️ Conflits détectés sur $branch - abandonnée"
+              git merge --abort
+              ((SYNC_FAILED++))
+            fi
           done
           
           # Retour sur main
           git checkout main
           
           echo ""
-          echo "📊 Résumé: ✅ $SYNC_SUCCESS réussies, ❌ $SYNC_FAILED échecs"
+          echo "📊 Résumé:"
+          echo "   ✅ Synchronisées: $SYNC_SUCCESS"
+          echo "   ⏭️  Déjà à jour: $SYNC_SKIPPED" 
+          echo "   ❌ Échecs: $SYNC_FAILED"
           
-          # Ne faire échouer l'action qui si TOUTES les branches échouent
-          if [ $SYNC_SUCCESS -eq 0 ] && [ $SYNC_FAILED -gt 0 ]; then
+          # L'action n'échoue que si toutes les branches ont échoué
+          if [ $SYNC_FAILED -gt 0 ] && [ $((SYNC_SUCCESS + SYNC_SKIPPED)) -eq 0 ]; then
             echo "::error::Toutes les synchronisations ont échoué"
             exit 1
           elif [ $SYNC_FAILED -gt 0 ]; then
             echo "::warning::Certaines branches n'ont pas pu être synchronisées"
           fi
-          
-          exit 0
